<resources>
    <string name="app_name">PrisonFantasy</string>

    <!-- GRAPHICAL ELEMENTS -->
    <string name="create_identity">Create your fictitious identity (and remember it well !) :</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="birthday_text">Birth date :</string>
    <string name="choose_height">Height</string>
    <string name="choose_weight">Weight</string>
    <string name="select_gender">Choose a gender to adapt texts :</string>
    <string name="result_gender_f">Female</string>
    <string name="result_gender_m">Male</string>
    <string name="gender_title_m">Mr</string>
    <string name="gender_title_f">Ms</string>
    <string name="gender_title_n">Mx</string>

    <string name="validate_button">Validate</string>
    <string name="answer_text">Answer</string>
    <string name="next_button">Next</string>

    <string name="resume_story_button">Reprendre l\'histoire en cours</string>
    <string name="create_identity_button">Créer un nouveau personnage</string>

    <!-- EMPTY FIELD ERRORS -->
    <string name="error_lastname_empty">You have to choose a last name</string>
    <string name="error_firstname_empty">You have to choose a first name</string>
    <string name="error_height_empty">You have to choose a heigth</string>
    <string name="error_weight_empty">You have to choose a weight</string>
    <string name="error_answer_empty">You have to enter an answer before validate</string>

    <!-- TOASTS : INCORRECT VALUE ERRORS -->
    <string name="error_height_value">Height should be between 100 and 250 cm</string>
    <string name="error_weight_value">Weight should be between 30 and 300 kg</string>
    <string name="error_age_value">Votre personnage doit être majeur</string>
    <string name="error_answer_incorrect_confirm_identity">You must write \"Confirm\", \"Modify\" or \"Delete\"</string>

    <!-- TOASTS : ANSWERS -->
    <string name="confirm_identity">CONFIRM</string>
    <string name="modify_identity">MODIFY</string>
    <string name="delete_identity">DELETE</string>

    <!-- TOASTS : OTHERS -->
    <string name="identity_confirmed">Identity confirmed</string>


    <!-- LOREM IPSUM -->
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ullamcorper magna non iaculis molestie. Etiam augue metus, fermentum sit amet leo a, accumsan rhoncus risus. Maecenas id aliquet sem. Suspendisse vehicula cursus semper. Nulla fringilla augue lacus, id convallis leo scelerisque in. Sed ut sapien lacinia, sagittis nisi non, tristique purus. Curabitur sed posuere quam. In hac habitasse platea dictumst. Maecenas ac erat tortor. Nam sagittis vitae ex vitae luctus. Maecenas volutpat mi ut tellus semper, in cursus augue bibendum. Donec eget turpis quis lectus vestibulum molestie euismod et dui. Donec ut leo ac magna ullamcorper semper et et tortor. Pellentesque diam nulla, dictum id feugiat sit amet, viverra gravida felis. Maecenas a neque velit. Vestibulum rutrum eget nunc id placerat. Aliquam semper, justo ut eleifend dictum, turpis erat viverra purus, ut mollis metus diam sed sem. Proin dignissim eros non ex pellentesque, consectetur tristique arcu consequat. Aenean feugiat sapien vel nulla consequat, non consequat diam congue. Nulla ornare erat et aliquam fringilla. Praesent quis ante tellus. Nam lobortis dictum dolor. Phasellus non elit elementum, elementum metus et, tempor tortor.</string>

    <!-- STORY TEXTS -->
    <string name="identity_review">Vous venez de créer un personnage dont le prénom est %1$s et le nom de famille %2$s. Sa date de naissance est le %3$d/%4$d/%5$d, il a donc aujourd\'hui %6$d ans !\n\nVous lui avez défini une taille de %7$dcm et un poids de %8$dkg.\n\nLe genre %9$s sera utilisé pour parler de votre personnage.\n\n\n\nSi votre personnage vous convient :\n- Veuillez écrire \"Confirmer\" puis validez\n\nSi vous voulez le modifier:\n- Veuillez écrire \"Modifier\" puis validez\n\nSi vous voulez le supprimer :\n- Veuillez écrire \"Supprimer\" puis validez</string>
    <string name="start_story_text">Le soleil brille, les oiseaux chantent, je sens la douce brise d\'air frais caresser mon visage, et le sable chaud passer entre mes orteils. La mer est calme aujourd\'hui, les enfants jouent avec leurs parents et profitent de la douce nature qui nous entoure. Je marche le long des dunes en souriant et je repense à ces moments de bonheur qui…\n\nDriiiiiiiiiiiiiiiiing\n\nQuoi ? Qu\'est-ce que… Ah… C\'était un rêve… Bon, tant pis, je me lève.\n\nDriiiiiiiiiiiiiiiiing\n\nAh, foutu téléphone… Je regarde par la fenêtre, évidemment il pleut. La journée commence bien…\n\nDriiiiiiiiiiiiiiiiing\n\nOui, oui, ça va j\'arrive ! J\'enfile un pantalon et un t-shirt, et respire un grand coup. C\'est sûrement le boulot qui m\'appelle…</string>
    <string name="first_call_text">Driiiiiiiiiiiiiiiiing\n\n\"Oui, allo ?\"\n\n\"Bonjour, je parle bien à %1$s %2$s %3$s ?\"\n\n\"C\'est bien moi. Qui est à l\'appareil ?\"\n\n\"Nous n\'avons pas beaucoup de temps. Avez vous de quoi noter ?\"\n\n\"Attendez… Oui, c\'est bon, je vous écoute.\"\n\n\"Je vais vous demander de bien noter les informations que je vais vous donner, surtout ne les perdez pas, c\'est très important, c\'est une question de vie ou de mort !\"\n\nOula, ça devient inquiètant… On me ferait une blague ?! Je vais noter quand même, sait-on jamais !\n\n\"Très bien, je suis prêt.\"\n\n\"%4$d | %5$s | %6$s\"</string>
    <string name="postman_text">\"On dirait des identifiants, je ne comprends pas… Si vous me demandez de faire quelque chose d\'illégal, sachez que c\'est hors-de-question !\"\n\n\"Non, bien sûr, ne vous inquietez pas. Je dois vous laisser, bon courage %1$s %2$s.\"\n\n\"Quoi ?! C\'est tout ? Et j\'en fais quoi maintenant, expliquez-moi ! Allo ? Allo ?!\"\n\nIl a raccroché !… C\'est quoi cette histoire… Quatre chiffres, un email et un genre de mot de passe… Je me demande ce que…\n\nDING-DONG\n\nC\'est pas vrai, quoi encore ?! On va pas me lâcher ce matin ! Allons ouvrir.\n\n\"Bonjour %1$s %2$s, j\'ai un colis pour vous.\"\n\n\"Je vous remercie, bonne journée à vous.\"\n\nJe me demande de qui ça vient… Tiens ? Ni nom ni adresse, je vais l\'ouvrir, on verra bien.</string>

</resources>